# mercury

./: .gitignore  Dockerfile  README.md  install_config.txt  mercury_bd.tcl  mercury_proj.tcl  microzed_7z020_master_XDC_commented_RevB_v1.xdc
.github/workflows/: build.yml
docker/: Dockerfile
mercury-app/: Dockerfile  README.md  compose.yml
mercury-app/catkin-proj/tmp/: test.json
mercury-app/pmod_pwm/: Makefile  pmod_pwm.c
mercury-app/ros-client/: Cargo.toml  Dockerfile  build.sh  compose.yml
mercury-app/ros-client/drive/: Cargo.toml
mercury-app/ros-client/drive/src/: drive_pub.rs  drive_sub.rs  motor_model.rs
mercury-app/ros-client/drive_pub/src/: main.rs
mercury-app/ros-client/drive_sub/src/: main.rs
mercury-app/ros-client/gantry_sub/: Cargo.toml
mercury-app/ros-client/src/: drive_sub.rs  load.rs  pynq.rs
mercury-app/ros-client/src/zynq/: axitimer.rs
mercury-app/src/hw_ifc/: CMakeLists.txt  Cargo.toml  package.xml
mercury-app/src/hw_ifc/.cargo/: config.toml
mercury-app/src/hw_ifc/src/: chassis_model.rs  drive_sub.rs  gantry_model.rs  gantry_pub.rs  gantry_sub.rs  gpio_test.rs  pwm_test.rs  regmap.rs
mercury-app/src/hw_ifc/src/zynq/: axigpio.rs  axitimer.rs  mmio.rs  mod.rs  pynq.rs
mercury-app/src/hw_srv/: CMakeLists.txt
mercury-app/test/: testgpio.c  testgpio.py
mercury-hdl/: .gitignore  README.md  ZoM_Carrier_Constraints.xdc  flash_bit.py  mercury_bd.tcl  mercury_proj.tcl  mercury_top.v  microzed_7z020_master_XDC_RevB_v1.xdc  microzed_7z020_master_XDC_commented_RevB_v1.xdc  scp_vivado.sh  stepper_pulse.v  stepper_pulse_test.v
(+130 files in other folders)
