[package]
name = "mercury-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9.11"
rosrust_msg = "0.1.7"

[[bin]]
name = "gantry_pub"
path = "src/gantry_pub.rs"

[[bin]]
name = "gantry_sub"
path = "src/gantry_sub.rs"

[[bin]]
name = "drive_pub"
path = "src/drive_pub.rs"

[[bin]]
name = "drive_sub"
path = "src/drive_sub.rs"
